--- a/src/variable.css
+++ b/src/variable.css
@@ -5,4 +5,6 @@
     --text-plain: black;
     --text-light: white;
     --input-focus: rgb(255, 196, 0);
+    --nav-link-inactive: black;
+    --nav-link-active: rgb(255, 196, 0);
 }
