--- a/src/variable.css
+++ b/src/variable.css
@@ -7,4 +7,5 @@
     --input-focus: rgb(255, 196, 0);
     --nav-link-inactive: black;
     --nav-link-active: rgb(255, 196, 0);
+    --popup-input-bg: rgb(246, 246, 246);
 }
