--- a/src/resources/CSS/variable.css
+++ b/src/resources/CSS/variable.css
@@ -9,4 +9,5 @@
     --nav-link-inactive: black;
     --nav-link-active: rgb(255, 196, 0);
     --popup-input-bg: rgb(246, 246, 246);
+    --qty-btn-border: #A5A5A5;
 }
